# otilib

./: pyproject.toml
examples/fortran/: gen_otilib.py
src/python/pyoti/python/: fmod_writer.py
